--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Jaren Urey
 #logo: /assets/img/headshot_circle.png
 description: test below image
 show_downloads: false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-midnight
